<resources>
    <string name="app_name">Personal_data</string>
    <string name="edit_name">Name</string>
    <string name="edit_phone">Phone Number</string>
    <string name="edit_email">E-mail</string>
    <string name="edit_age">Age</string>
    <string name="edit_weight">Weight</string>
    <string name="edit_height">Height</string>
    <string name="button_send">Send</string>
    <string name="dados_pessoais">Personal_data:</string>
    <string name="nome_obrigatorio">Name is required!</string>
    <string name="nome_invalido">Put your first and last name!</string>
    <string name="telefone_obrigatorio">Phone number is required!</string>
    <string name="numero_invalido">\"Invalid Phone Number! \"</string>
    <string name="email_obrigatorio">E-mail is required!</string>
    <string name="email_invalido">Invalid e-mail!</string>
    <string name="idade_obrigatorio">Age is required!</string>
    <string name="idade_invalida">Invalid age!</string>
    <string name="peso_obrigatorio">Weight is required!</string>
    <string name="peso_invalido">Invalid weight!</string>
    <string name="altura_obrigatoria">Height is required!</string>
    <string name="altura_invalida">Invalid height!</string>
</resources>
